<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00F8F3F3"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtShippingDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shippingDetails"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginTop="10dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:id="@+id/txtFirstName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/firstName"
                            />

                        <EditText
                            android:id="@+id/editFirstName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/input_fields"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        >

                        <TextView
                            android:id="@+id/txtLastName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lastName"
                            />

                        <EditText
                            android:id="@+id/editLastName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/input_fields"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        >

                        <TextView
                            android:id="@+id/txtAddressLine"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/addressLine"
                            />

                        <EditText
                            android:id="@+id/editAddressLine"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/input_fields"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        >

                        <TextView
                            android:id="@+id/txtApartNum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/apartmentNumber"
                            />

                        <EditText
                            android:id="@+id/editApartNum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/input_fields"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        >

                        <TextView
                            android:id="@+id/txtCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/city"
                            />

                        <EditText
                            android:id="@+id/editCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/input_fields"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        >

                        <TextView
                            android:id="@+id/txtProvince"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/province"
                            />

                        <EditText
                            android:id="@+id/editProvince"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/input_fields"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        >

                        <TextView
                            android:id="@+id/txtPostalCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/postalCode"
                            />

                        <EditText
                            android:id="@+id/editPostalCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/input_fields"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnSavedAddresses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_radius"
                        android:text="@string/savedAddresses"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtCardDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cardDetails"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginTop="30dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="20dp"
                android:layout_marginBottom="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtCardholderName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cardHolder" />

                        <EditText
                            android:id="@+id/editCardholderName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_fields"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/txtCardNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cardNumber" />

                        <EditText
                            android:id="@+id/editCardNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_fields"
                            android:ems="10"
                            android:inputType="numberSigned"
                            android:maxLength="16"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_weight="1">

                                <TextView
                                    android:id="@+id/txtExpiryDate"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/expiryDate" />

                                <EditText
                                    android:id="@+id/editExpiryDate"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/input_fields"
                                    android:ems="10"
                                    android:inputType="numberSigned"
                                    android:maxLength="4"
                                    android:textSize="14sp" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_weight="2">

                                <TextView
                                    android:id="@+id/txtCVV"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/cvvNumber" />

                                <EditText
                                    android:id="@+id/editCVV"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/input_fields"
                                    android:ems="10"
                                    android:inputType="numberSigned"
                                    android:maxLength="3"
                                    android:textSize="14sp" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnSavedCards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/savedCards"
                        android:background="@drawable/button_radius"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnCheckOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkout"
                android:backgroundTint="@color/primaryDarkColor"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:layout_marginBottom="50dp"
                android:paddingVertical="30dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
